--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <header>
+      <h1 class="text-center">Todolist</h1>
+    </header>
+    <div id="app">
+      <div class="text-center">
+        <input type="text" placeholder="inserisci una nuova task" />
+        <button>Aggiungi task</button>
+      </div>
+      <h2></h2>
+      <div class="section d-flex">
+        <div class="container d-flex">
+          <ul>
+            <li v-for="(task, index) in todoList">
+              <h2
+                @click="changeflag(index)"
+                v-text="todoList[index].todo"
+                :class="{ completed: todoList[index].done }"
+              ></h2>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
